--- a/src/components/ui/basic.less
+++ b/src/components/ui/basic.less
@@ -12,6 +12,7 @@
   background-color: #fff;
   border: 1px solid @ui_panel_borderColor;
   border-radius: 4px;
+  overflow: hidden;
   box-sizing: border-box;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
   padding: @ui_panel_padding;
@@ -53,7 +54,8 @@
 
 /*增加厚度*/
 .weight() {
-  box-shadow+: 0 1px 0 0 #333, inset 0 1px 1px -1px rgba(255, 255, 255, 0.6);
+  transform: translate(0, -1px);
+  box-shadow+: 0 1px 0 0 #979797, inset 0 1px 1px -1px rgba(255, 255, 255, 0.6);
 }
 
 /*凹进去*/
