增加了重名验证

--- a/src/components/ui/basic.less
+++ b/src/components/ui/basic.less
@@ -41,9 +41,10 @@
   min-width: @ui_min_click_width;
   min-height: @ui_min_click_height;
   transition: box-shadow 0.5s;
+
   &:hover {
-     .shaow(2, 100);
-     //.weight();
+    .shaow(2, 100);
+    //.weight();
   }
 
   &:active {
@@ -108,6 +109,8 @@
     font-size: 12px;
   }
 }
+
 // =======================
 // 表单颜色
 @form_focus_color: #409eff;
+@form_error_color: #ff6a51;
